--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@ limitations under the License.
     </parent>
     <groupId>com.github.jrh3k5</groupId>
     <artifactId>flume-agent-maven-plugin</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>Flume Agent Maven Plugin</name>
     <description>A Maven plugin to manage the lifecycle of a Flume agent</description>
@@ -37,7 +37,7 @@ limitations under the License.
         <connection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</developerConnection>
         <url>https://github.com/jrh3k5/flume-agent-maven-plugin</url>
-      <tag>flume-agent-maven-plugin-1.2</tag>
+      <tag>HEAD</tag>
   </scm>
     <issueManagement>
         <system>GitHub</system>
