--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <powermock.version>1.5.2</powermock.version>
     </properties>
+    <prerequisites>
+        <maven>3.1.1</maven>
+    </prerequisites>
     <scm>
         <connection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</developerConnection>
@@ -78,7 +81,7 @@
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>[3.0.4,4.0)</version>
+                            <version>[3.1.1,4.0)</version>
                         </requireMavenVersion>
                         <requireJavaVersion>
                             <version>[1.6,1.7)</version>
@@ -112,6 +115,10 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                 </plugin>
@@ -120,12 +127,24 @@
                     <version>2.8</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>1.3.1</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.4</version>
+                    <version>1.5</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
@@ -140,8 +159,20 @@
                     <version>2.4.2</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.13</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.2.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.2</version>
                 </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
