--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
     <groupId>com.github.jrh3k5</groupId>
     <artifactId>flume-agent-maven-plugin</artifactId>
-    <version>2.1</version>
+    <version>2.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     <name>Flume Agent Maven Plugin</name>
     <description>A Maven plugin to manage the lifecycle of a Flume agent</description>
@@ -28,7 +28,7 @@
         <connection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</developerConnection>
         <url>https://github.com/jrh3k5/flume-agent-maven-plugin</url>
-        <tag>flume-agent-maven-plugin-2.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub</system>
