Fixes #14: add documentation of where to find CI management and Travis tag to README.md

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,10 @@
         <system>GitHub</system>
         <url>https://github.com/jrh3k5/flume-agent-maven-plugin/issues</url>
     </issueManagement>
+    <ciManagement>
+        <system>Travis</system>
+        <url>https://travis-ci.org/jrh3k5/flume-agent-maven-plugin/</url>
+    </ciManagement>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
