--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <maven>3.3.9</maven>
     </prerequisites>
     <scm>
-        <connection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jrh3k5/flume-agent-maven-plugin.git</developerConnection>
+        <connection>scm:git:https://github.com/jrh3k5/flume-agent-maven-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/jrh3k5/flume-agent-maven-plugin.git</developerConnection>
         <url>https://github.com/jrh3k5/flume-agent-maven-plugin</url>
         <tag>flume-agent-maven-plugin-3.0</tag>
     </scm>
